Fix the font not showing the word Efficiency correctly
- Cleaned up unused fonts
- Removed the fonts demo files

--- a/src/Sidekick/wwwroot/css/site.css
+++ b/src/Sidekick/wwwroot/css/site.css
@@ -8,28 +8,28 @@
 
 @font-face {
     font-family: 'fontin';
-    src: url("/fonts/fontin-bold-webfont.woff2") format("woff2"), url("/fonts/fontin-bold-webfont.woff") format("woff");
+    src: url("/fonts/fontin-bold-webfont.woff") format("woff");
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'fontin';
-    src: url("/fonts/fontin-italic-webfont.woff2") format("woff2"), url("/fonts/fontin-italic-webfont.woff") format("woff");
+    src: url("/fonts/fontin-italic-webfont.woff") format("woff");
     font-weight: normal;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'fontin';
-    src: url("/fonts/fontin-regular-webfont.woff2") format("woff2"), url("/fonts/fontin-regular-webfont.woff") format("woff");
+    src: url("/fonts/fontin-regular-webfont.woff") format("woff");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'fontin-smallcaps';
-    src: url("/fonts/fontin-smallcaps-webfont.woff2") format("woff2"), url("/fonts/fontin-smallcaps-webfont.woff") format("woff");
+    src: url("/fonts/fontin-smallcaps-webfont.woff") format("woff");
     font-weight: normal;
     font-style: normal;
 }
